// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Ant Theme generate ant theme from darkTheme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": 14,
      "contentFontSizeLG": 14,
      "contentFontSizeSM": 14,
    },
    "Divider": {
      "colorSplit": "#cdcdcd",
    },
    "Menu": {
      "groupTitleColor": "#898989",
      "groupTitleFontSize": 12,
      "groupTitleLineHeight": 1,
      "iconSize": 16,
      "itemActiveBg": "#1890ff14",
      "itemBorderRadius": 4,
      "itemHeight": 32,
      "itemHoverBg": "#00000014",
      "itemSelectedBg": "#1890ff14",
    },
    "Message": {
      "colorError": "#ff3822",
      "colorInfo": "#1890ff",
      "colorSuccess": "#52c41a",
      "colorText": "#636363",
      "colorWarning": "#ff9933",
      "zIndexPopup": 990,
    },
    "Table": {
      "borderColor": "#f2f2f2",
      "cellPaddingInline": 16,
      "cellPaddingInlineMD": 16,
      "cellPaddingInlineSM": 16,
      "colorText": "#636363",
      "headerBg": "#f2f2f2",
      "rowHoverBg": "#00000014",
    },
    "Typography": {
      "fontSizeHeading1": 24,
      "fontSizeHeading2": 20,
      "fontSizeHeading3": 18,
      "fontSizeHeading4": 16,
      "lineHeightHeading1": 1.3333333333333333,
      "lineHeightHeading2": 1.6,
      "lineHeightHeading3": 1.3333333333333333,
      "lineHeightHeading4": 1.5,
      "titleMarginBottom": 0,
      "titleMarginTop": 0,
    },
  },
  "token": {
    "borderRadius": 4,
    "colorBgBase": "#ffffff",
    "colorBgElevated": "#ffffff",
    "colorBgLayout": "#eaf3ff",
    "colorError": "#b91200",
    "colorInfo": "#005dc9",
    "colorPrimary": "#005dc9",
    "colorSuccess": "#52c41a",
    "colorText": "#464646",
    "colorTextBase": "#464646",
    "colorWarning": "#ff9933",
    "fontFamily": "Inter",
    "fontSize": 14,
    "margin": 16,
    "padding": 16,
    "wireframe": false,
  },
}
`;

exports[`Generate Ant Theme generate ant theme from empty theme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": undefined,
      "contentFontSizeLG": undefined,
      "contentFontSizeSM": undefined,
    },
    "Divider": {
      "colorSplit": undefined,
    },
    "Menu": {
      "groupTitleColor": undefined,
      "groupTitleFontSize": undefined,
      "groupTitleLineHeight": 1,
      "iconSize": undefined,
      "itemActiveBg": undefined,
      "itemBorderRadius": undefined,
      "itemHeight": 32,
      "itemHoverBg": undefined,
      "itemSelectedBg": undefined,
    },
    "Message": {
      "colorError": undefined,
      "colorInfo": undefined,
      "colorSuccess": undefined,
      "colorText": undefined,
      "colorWarning": undefined,
      "zIndexPopup": 990,
    },
    "Table": {
      "borderColor": undefined,
      "cellPaddingInline": undefined,
      "cellPaddingInlineMD": undefined,
      "cellPaddingInlineSM": undefined,
      "colorText": undefined,
      "headerBg": undefined,
      "rowHoverBg": undefined,
    },
    "Typography": {
      "fontSizeHeading1": undefined,
      "fontSizeHeading2": undefined,
      "fontSizeHeading3": undefined,
      "fontSizeHeading4": undefined,
      "lineHeightHeading1": undefined,
      "lineHeightHeading2": undefined,
      "lineHeightHeading3": undefined,
      "lineHeightHeading4": undefined,
      "titleMarginBottom": 0,
      "titleMarginTop": 0,
    },
  },
  "token": {
    "borderRadius": undefined,
    "colorBgBase": undefined,
    "colorBgElevated": undefined,
    "colorBgLayout": undefined,
    "colorError": undefined,
    "colorInfo": undefined,
    "colorPrimary": undefined,
    "colorSuccess": undefined,
    "colorText": "#464646",
    "colorTextBase": "#464646",
    "colorWarning": undefined,
    "fontFamily": "Inter",
    "fontSize": 14,
    "margin": undefined,
    "padding": undefined,
    "wireframe": false,
  },
}
`;

exports[`Generate Ant Theme generate ant theme from lightTheme 1`] = `
{
  "algorithm": [Function],
  "components": {
    "Button": {
      "contentFontSize": 14,
      "contentFontSizeLG": 14,
      "contentFontSizeSM": 14,
    },
    "Divider": {
      "colorSplit": "#cdcdcd",
    },
    "Menu": {
      "groupTitleColor": "#898989",
      "groupTitleFontSize": 12,
      "groupTitleLineHeight": 1,
      "iconSize": 16,
      "itemActiveBg": "#1890ff14",
      "itemBorderRadius": 4,
      "itemHeight": 32,
      "itemHoverBg": "#00000014",
      "itemSelectedBg": "#1890ff14",
    },
    "Message": {
      "colorError": "#e50020",
      "colorInfo": "#005dc9",
      "colorSuccess": "#259100",
      "colorText": "#636363",
      "colorWarning": "#A44C00",
    },
    "Table": {
      "borderColor": "#f2f2f2",
      "cellPaddingInline": 16,
      "cellPaddingInlineMD": 16,
      "cellPaddingInlineSM": 16,
      "colorText": "#636363",
      "headerBg": "#f2f2f2",
      "rowHoverBg": "#00000014",
    },
    "Typography": {
      "fontSizeHeading1": 24,
      "fontSizeHeading2": 20,
      "fontSizeHeading3": 18,
      "fontSizeHeading4": 16,
      "lineHeightHeading1": 1.3333333333333333,
      "lineHeightHeading2": 1.6,
      "lineHeightHeading3": 1.3333333333333333,
      "lineHeightHeading4": 1.5,
      "titleMarginBottom": 0,
      "titleMarginTop": 0,
    },
  },
  "token": {
    "borderRadius": 4,
    "colorBgBase": "#ffffff",
    "colorBgElevated": "#ffffff",
    "colorBgLayout": "#eaf3ff",
    "colorError": "#e50020",
    "colorInfo": "#005dc9",
    "colorPrimary": "#005dc9",
    "colorSuccess": "#259100",
    "colorText": "#464646",
    "colorTextBase": "#464646",
    "colorWarning": "#A44C00",
    "fontFamily": "Inter",
    "fontSize": 14,
    "margin": 16,
    "padding": 16,
    "wireframe": false,
  },
}
`;
